2012-01-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/ralloc2.cc:
	  Register allocation infrastructure for the stm8 port.
	* src/stm8/gen.c:
	  Code generation infrastructure for the stm8 port.

2013-01-05 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: More informations from map file.

2013-01-05 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: The required perl version: 5.12.0
          One repair: The unknown instruction is actually simple embedded
          data in the code.

2013-01-05 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: New commandline option: --map-file
	  More detailed comments of instructions.

2013-01-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.h,
	* src/hc08/ralloc.c,
	* src/hc08/gen.h,
	* src/hc08/gen.c: Removed some unused fields of the asmop
	  struct. Made checking asmops for registers more efficient.

2013-01-04 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm: New commandline option: --code-size
	  In addition, limited tracking of some register (Rx, DPTR).

2013-01-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c: Removed old code from the original fork
	  from mcs51 that was not being used. Brought the old register
	  allocator up to date with the current code generator.
	* src/hc08/gen.c: Support ldhx/sthx with stack operands on s08.
	  Avoid using hx to assign literals to stack operands on hc08.

2013-01-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genAssignLit): fixed bug on systems that default
	  to signed char.

2013-01-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed code size regression on s08 from overuse
	  of indexed addressing mode. Clean out some old, unused source.
	  Initialize hc08_aop_pass[] only once. Correct costs in