@@ -1,3 +1,7 @@
+2013-01-06 Borut Razem <borut.razem AT gmail.com>
+
+	* src/SDCCasm.c, src/SDCCasm.h: excluded unused asm mappings
+
 2012-01-06 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/ralloc.c,
